--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 
   /* background: color image repeat position/size */
   background: var(--bg-url) no-repeat no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -43,7 +44,7 @@ body * {
 
 #container {
   width: 100%;
-  max-width: 588;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -167,4 +168,15 @@ ul li a:hover {
 footer {
   padding: 24px 0;
   text-align: center;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
